[package]
name = "cron-wrapper"
version = "0.1.0"
authors = ["Daniel Parks <oss-cron-wrapper@demonhorse.org>"]
description = "Cron job wrapper for better failure reporting"
homepage = "https://github.com/danielparks/cron-wrapper"
repository = "https://github.com/danielparks/cron-wrapper"
documentation = "https://github.com/danielparks/cron-wrapper"
readme = "README.md"
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1.0.44"
bstr = { version = "1.1.0", default-features = false }
clap = { version = "4.0.18", features = ["derive"] }
duration-str = { version = "0.5.0", default-features = false }
is-terminal = "0.4.7"
log = "0.4.14"
nix = { version = "0.26.1", default-features = false, features = ["signal", "process"] }
popol = "3.0.0"
shell-words = "1.1.0"
simplelog = "0.12.0"
termcolor = "1.1.3"
thiserror = "1.0.40"
time = { version = "0.3.21", features = ["local-offset", "formatting"] }

[dev-dependencies]
assert2 = "0.3.7"
assert_cmd = "2.0.7"
regex = { version = "1.8.1", default-features = false, features = ["std"] }
tempfile = "3.5.0"
