[package]
name = "cron-wrapper"
version = "0.1.0"
authors = ["Daniel Parks <oss-cron-wrapper@demonhorse.org>"]
description = "Cron job wrapper for better failure reporting"
homepage = "https://github.com/danielparks/cron-wrapper"
repository = "https://github.com/danielparks/cron-wrapper"
documentation = "https://github.com/danielparks/cron-wrapper"
readme = "README.md"
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1.0.44"
bstr = { version = "1.1.0", default-features = false }
clap = { version = "4.0.18", features = ["derive"] }
duration-str = { version = "0.5.0", default-features = false }
is-terminal = "0.4.7"
log = "0.4.14"
nix = { version = "0.26.1", default-features = false, features = ["signal", "process"] }
nom = "7.1.3"
os_pipe = "1.1.5"
popol = "3.0.0"
shlex = "1.3.0"
simplelog = "0.12.0"
termcolor = "1.1.3"
thiserror = "1.0.40"
time = { version = "0.3.21", features = ["local-offset", "formatting"] }

[dev-dependencies]
assert2 = "0.3.7"
assert_cmd = "2.0.7"
regex = { version = "1.8.1", default-features = false, features = ["std"] }
tempfile = "3.5.0"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
missing_docs_in_private_items = "warn"

# Other restriction lints
arithmetic_side_effects = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
empty_structs_with_brackets = "warn"
filetype_is_file = "warn" # maybe?
fn_to_numeric_cast_any = "warn"
format_push_string = "warn" # maybe? alternative is fallible.
get_unwrap = "warn"
impl_trait_in_params = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

# Pedantic exceptions
let_underscore_untyped = "allow"
manual_string_new = "allow"
map_unwrap_or = "allow"
module_name_repetitions = "allow"
