[package]
name = "cron-wrapper"
version = "0.1.0"
authors = ["Daniel Parks <oss-cron-wrapper@demonhorse.org>"]
description = "Cron job wrapper for better failure reporting"
homepage = "https://github.com/danielparks/cron-wrapper"
repository = "https://github.com/danielparks/cron-wrapper"
documentation = "https://github.com/danielparks/cron-wrapper"
readme = "README.md"
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
bstr = { version = "1.12.1", default-features = false, features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
clap_lex = "0.7.6"
duration-str = { version = "0.18.0", default-features = false }
fd-lock = "4.0.4"
home = "0.5.12"
is-terminal = "0.4.17"
log = "0.4.29"
nix = { version = "0.30.1", default-features = false, features = ["signal", "process", "user"] }
nom = "8.0.0"
os_pipe = "1.2.3"
popol = "3.0.1"
roundable = "0.2.0"
shlex = "1.3.0"
simplelog = "0.12.2"
termcolor = "1.4.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["local-offset", "formatting"] }

[dev-dependencies]
assert2 = "0.3.16"
assert_cmd = "2.1.1"
regex = { version = "1.12.2", default-features = false, features = ["std"] }
tempfile = "3.24.0"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"

# Other restriction lints
arithmetic_side_effects = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
empty_structs_with_brackets = "warn"
filetype_is_file = "warn" # maybe?
fn_to_numeric_cast_any = "warn"
format_push_string = "warn" # maybe? alternative is fallible.
get_unwrap = "warn"
impl_trait_in_params = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

# Pedantic exceptions
let_underscore_untyped = "allow"
manual_string_new = "allow"
map_unwrap_or = "allow"
module_name_repetitions = "allow"
unnecessary_debug_formatting = "allow" # display() doesn’t escape invalid chars

# Nursery exceptions
option_if_let_else = "allow"
